--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small"></span> Angel LaVoie.</h1>
     <p>Programmer, IT Specialist, Nerd.</p>
-    <img src="assets/greyscalecandid.jpg" alt="boy" class="w3-image" width="692" height="608">
+    <p>They/Them/Theirs</p>
+    <img src="assets/greyscalecandid.jpg" alt="me" class="w3-image" width="692" height="608">
   </header>
 
   <!-- About Section -->
@@ -85,11 +86,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </div><br>
     <p class="w3-wide">Physical Machine Repair and Building</p>
     <div class="w3-white">
-      <div class="w3-dark-grey" style="height:28px;width:75%"></div>
+      <div class="w3-dark-grey" style="height:28px;width:70%"></div>
     </div><br>
     <p class="w3-wide">Photography, Photo Editing, and Poster/Infographic Creation</p>
     <div class="w3-white">
-      <div class="w3-dark-grey" style="height:28px;width:70%"></div>
+      <div class="w3-dark-grey" style="height:28px;width:50%"></div>
     </div><br>
     
     <!-- Find something to do with this? -->
@@ -113,7 +114,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </div> -->
 
     <button class="w3-button w3-light-grey w3-padding-large w3-section">
-      <a href="/assets/resume.pdf" download="Angel LaVoies Resume.pdf"><i class="fa fa-download"></i> Download Resume </a>
+      <a href="assets/resume.pdf" download="Angel LaVoies Resume.pdf"><i class="fa fa-download"></i> Download Resume </a>
     </button>
     
     <!-- Also find something to do with this? -->
