--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </button>
     
     <!-- Also find something to do with this? -->
+    <!-- Josh is writing me a Testimonial about IT Work -->
+    <!-- Find another Testimonial? -->
     <!-- Testimonials -->
     <!-- <h3 class="w3-padding-24 w3-text-light-grey">My Reputation</h3>  
     <img src="/w3images/bandmember.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
@@ -146,7 +148,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       </div>
     <!-- End GitHub Pages Embeds Grid -->
     </div>
-    <p>You can see further what these projects entail and more on my GitHub</p>
+    <p>You can see further what these projects entail and more projects in general on my GitHub</p>
   <!-- End Portfolio Section -->
   </div>
 
