--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <!-- Navbar on small screens (Hidden on medium and large screens) -->
 <div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
   <div class="w3-bar w3-black w3-opacity w3-hover-opacity-off w3-center w3-small">
-    <a href="#" class="w3-bar-item w3-button" style="width:25% !important">HOME</a>
-    <a href="#about" class="w3-bar-item w3-button" style="width:25% !important">ABOUT</a>
-    <a href="#projects" class="w3-bar-item w3-button" style="width:25% !important">PROJECTS</a>
-    <a href="#photos" class="w3-bar-item w3-button" style="width:25% !important">PHOTOS</a>
-    <a href="#contact" class="w3-bar-item w3-button" style="width:25% !important">CONTACT</a>
+    <a href="#" class="w3-bar-item w3-button" style="width:33% !important">HOME</a>
+    <a href="#about" class="w3-bar-item w3-button" style="width:33% !important">ABOUT</a>
+    <a href="#projects" class="w3-bar-item w3-button" style="width:33% !important">PROJECTS</a>
+    <a href="#photos" class="w3-bar-item w3-button" style="width:50% !important">PHOTOS</a>
+    <a href="#contact" class="w3-bar-item w3-button" style="width:50% !important">CONTACT</a>
   </div>
 </div>
 
@@ -59,8 +59,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <div class="w3-padding-large" id="main">
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
-    <h1 class="w3-jumbo"><span class="w3-hide-small"></span> Angel LaVoie.</h1>
-    <p>Programmer, IT Specialist, Nerd.</p>
+    <h1 class="w3-jumbo"><span class="w3-hide-small"></span> Angel LaVoie</h1>
+    <p>Programmer, IT Specialist, Nerd</p>
     <p>They/Them/Theirs</p>
     <img src="assets/greyscalecandid.jpg" alt="me" class="w3-image" width="602" height="608">
   </header>
@@ -159,8 +159,18 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
     <!-- Photo Grid -->
     <div class="w3-row-padding" style="margin:0 -16px">
-      <div class="w3-half>"></div>
-      <div class="w3-half"></div>
+      <div class="w3-half>">
+        <img src="assets/photos/525.JPG" style="width:100%">
+        <img src="assets/photos/canon.JPG" style="width:100%">
+      </div>
+      <div class="w3-half">
+        <img src="assets/photos/seaportlights.JPG" style="width:100%">
+        <img src="assets/photos/leopard.JPG" style="width:100%">
+      </div>
+      <div class="w3-half">
+        <img src="assets/photos/campus.JPG" style="width:100%">
+        <img src="assets/photos/christmaslights.JPG" style="width:100%">
+      </div>
     <!-- End Photo Grid -->
     </div>
   <!-- End Photography Section -->
