--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p>They are also a programmer in their free time and devote a lot of time to creating applications for users within the other hobbies they enjoy.</p>
     <p>Hands-on learning and adaptability to jobs given to them is one of their strong suits and one of the things they enjoy most working in IT related fields</p>
     <h3 class="w3-padding-16 w3-text-light-grey">My Skills</h3>
+    <!-- Change this to not be ratings/proficiency bars -->
     <p class="w3-wide">Scripting and System Administration</p>
     <div class="w3-white">
       <div class="w3-dark-grey" style="height:28px;width:90%"></div>
@@ -142,11 +143,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
         <iframe src="https://sspyr.github.io/HandsomeJackBot/" style="width:500px; height:500px"></iframe>
-        <iframe src="https://sspyr.github.io/BL3-Object-Explorer/" style="width:500px; height:500px"></iframe>
+        <iframe src="https://sspyr.github.io/WITAssistant/" style="width:500px; height:500px"></iframe>
       </div>
       <div class="w3-half">
         <iframe src="https://sspyr.github.io/AdaptiveQuiz/" style="width:500px; height:500px"></iframe>
-        <iframe src="https://sspyr.github.io/RandomizerPackage/" style="width:500px; height:500px"></iframe>
+        <iframe src="https://sspyr.github.io/BL3-Object-Explorer/" style="width:500px; height:500px"></iframe>
       </div>
     <!-- End GitHub Pages Embeds Grid -->
     </div>
