--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+TODO: Edit Site a bit to reflect changes in professional development
+
+
 <!DOCTYPE html>
 <html>
 <title>Angel LaVoie</title>
@@ -115,9 +118,10 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       </div>
     </div> -->
 
-    <button class="w3-button w3-light-grey w3-padding-large w3-section">
+    <!-- Probably shouldn't make this available online with the info it has -->
+    <!-- <button class="w3-button w3-light-grey w3-padding-large w3-section">
       <a href="assets/resume.pdf" download="Angel LaVoies Resume.pdf"><i class="fa fa-download"></i> Download Resume </a>
-    </button>
+    </button> -->
     
     <!-- Also find something to do with this? -->
     <!-- Josh is writing me a Testimonial about IT Work -->
