--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-TODO: Edit Site a bit to reflect changes in professional development
-
-
 <!DOCTYPE html>
 <html>
 <title>Angel LaVoie</title>
@@ -66,7 +63,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small"></span> Angel LaVoie</h1>
     <p>Programmer, IT Specialist, Nerd</p>
-    <p>They/Them/Theirs</p>
+    <p>He/Him/His or They/Them/Theirs</p>
     <img src="assets/greyscalecandid.jpg" alt="me" class="w3-image" width="602" height="608">
   </header>
 
@@ -74,8 +71,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">About Angel</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p>Angel LaVoie is a Computer Networking Student attending Wentworth Institute of Technology, expected to graduate in December of 2021.</p>
-    <p>Their main goal is to acquire their degree and work their way up to a position as a System or Network Administration within either the Private Sector or within Higher Education.</p>
+    <p>Angel LaVoie is a Bachelors of Computer Networking Graduate of Wentworth Institute of Technology working in Higher Education IT.</p>
+    <p>They currently are working on expanding their skills within the Systems Administration and IT Project Management fields in order to further their professional career.</p>
     <p>They have worked as apart of Wentworth's Division of Technical Services since the First Year of University and enjoy working in every facet of Higher Education IT Support.</p>
     <p>They are also a programmer in their free time and devote a lot of time to creating applications for users within the other hobbies they enjoy.</p>
     <p>Hands-on learning and adaptability to jobs given to them is one of their strong suits and one of the things they enjoy most working in IT related fields</p>
@@ -83,15 +80,15 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <!-- Change this to not be ratings/proficiency bars -->
     <p class="w3-wide">Scripting and System Administration</p>
     <div class="w3-white">
-      <div class="w3-dark-grey" style="height:28px;width:90%"></div>
-    </div><br>
-    <p class="w3-wide">Object Oriented Programming and Networking Infrastructuring</p>
-    <div class="w3-white">
-      <div class="w3-dark-grey" style="height:28px;width:85%"></div>
+      <div class="w3-dark-grey" style="height:28px;width:80%"></div>
     </div><br>
     <p class="w3-wide">Physical Machine Repair and Building</p>
     <div class="w3-white">
-      <div class="w3-dark-grey" style="height:28px;width:70%"></div>
+      <div class="w3-dark-grey" style="height:28px;width:75%"></div>
+    </div><br>
+    <p class="w3-wide">Object Oriented Programming and Networking Infrastructure</p>
+    <div class="w3-white">
+      <div class="w3-dark-grey" style="height:28px;width:65%"></div>
     </div><br>
     <p class="w3-wide">Photography, Photo Editing, and Poster/Infographic Creation</p>
     <div class="w3-white">
@@ -147,7 +144,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
         <iframe src="https://sspyr.github.io/HandsomeJackBot/" style="width:500px; height:500px"></iframe>
-        <iframe src="https://sspyr.github.io/WITAssistant/" style="width:500px; height:500px"></iframe>
+        <iframe src="https://sspyr.github.io/DS-Final-Project/" style="width:500px; height:500px"></iframe>
       </div>
       <div class="w3-half">
         <iframe src="https://sspyr.github.io/AdaptiveQuiz/" style="width:500px; height:500px"></iframe>
